<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robotis_manipulator</name>
  <version>1.0.0</version>
  <description>
    This package contains the manipulation API and functions for controlling the manipulator.
  </description>
  <license>Apache 2.0</license>
  <author email="hjkim@robotis.com">Hye-Jong KIM</author>
  <author email="thlim@robotis.com">Darby Lim</author>
  <author email="yhna@robotis.com">Yong-Ho Na</author>
  <author email="jhshim@robotis.com">Ryan Shim</author>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <maintainer email="hjkim@robotis.com">Hye-Jong KIM</maintainer>
  <url type="website">http://wiki.ros.org/robotis_manipulator</url>
  <url type="emanual">http://emanual.robotis.com/docs/en/platform/openmanipulator</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/robotis_manipulator</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/robotis_manipulator/issues</url>
  <depend>ament_cmake</depend>
  <depend>rclcpp</depend>
  <depend>cmake_modules</depend>
  <depend>eigen</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
