<?xml version="1.0"?>
<package format="2">
  <name>robotis_manipulator</name>
  <version>1.1.1</version>
  <description>
    This package contains the manipulation API and functions for controlling the manipulator.
  </description>
  <license>Apache 2.0</license>
  <author email="hjkim@robotis.com">Hye-Jong KIM</author>
  <author email="thlim@robotis.com">Darby Lim</author>
  <author email="yhna@robotis.com">Yong-Ho Na</author>
  <author email="jhshim@robotis.com">Ryan Shim</author>
  <maintainer email="willson@robotis.com">Will Son</maintainer>
  <url type="website">http://wiki.ros.org/robotis_manipulator</url>
  <url type="emanual">http://emanual.robotis.com/docs/en/platform/openmanipulator</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/robotis_manipulator</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/robotis_manipulator/issues</url>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>cmake_modules</depend>
  <depend>eigen</depend>
</package>
